@@ -15,19 +15,28 @@ PROCESS input element_data = {
 };
 PROCESS input element_data = {
     type = 'hidden'
-    name = 'language_code'
-   value = language_code
-};
-PROCESS input element_data = {
-    type = 'hidden'
     name = "format"
    value = format
+};
+PROCESS select element_data = {
+           name = 'language_code'
+        options = languages
+  default_blank = 1
+ default_values = [language_code]
+      text_attr = 'description'
+     value_attr = 'code'
 };
 PROCESS button element_data = {
     type = 'submit'
     name = 'action'
    value = 'save'
     text = text('Save')
-}; ?>
+}; 
+PROCESS button element_data = {
+    type = 'submit'
+    name = 'action'
+   value = 'get'
+    text = text('Retrieve')
+} ?>
 </body>
 </html>
